doménová logika pre catalog subdoménu