@@ -1,63 +1,60 @@
-// src/main/java/sk/librasys/domain/catalog/ISBN.java
 package sk.isk.domain.catalog;
 
-import sk.isk.domain.shared.ValueObject;
+import sk.isk.domain.shared.DomainException;
 import java.util.Objects;
-import java.util.regex.Pattern;
 
-public final class ISBN implements ValueObject {
-
-    private static final Pattern ISBN_10_PATTERN = Pattern.compile("^\\d{9}[\\dX]$");
-    private static final Pattern ISBN_13_PATTERN = Pattern.compile("^\\d{13}$");
+public final class ISBN {
 
     private final String value;
 
     public ISBN(String value) {
-        if (value == null || value.trim().isEmpty()) {
-            throw new IllegalArgumentException("ISBN cannot be null or empty");
+        if (value == null || value.isBlank()) {
+            throw new DomainException("ISBN nesmie byť prázdne.");
         }
-
         String normalized = value.replaceAll("[\\s-]", "");
-
-        if (!isValid(normalized)) {
-            throw new IllegalArgumentException("Invalid ISBN format: " + value);
+        if (!isValidIsbn10(normalized) && !isValidIsbn13(normalized)) {
+            throw new DomainException("Neplatný formát ISBN: " + value);
         }
-
         this.value = normalized;
-    }
-
-    private boolean isValid(String isbn) {
-        return ISBN_10_PATTERN.matcher(isbn).matches()
-                || ISBN_13_PATTERN.matcher(isbn).matches();
     }
 
     public String getValue() {
         return value;
     }
 
-    public String getFormatted() {
-        if (value.length() == 10) {
-            return String.format("%s-%s-%s-%s",
-                    value.substring(0, 1),
-                    value.substring(1, 5),
-                    value.substring(5, 9),
-                    value.substring(9));
-        } else {
-            return String.format("%s-%s-%s-%s-%s",
-                    value.substring(0, 3),
-                    value.substring(3, 4),
-                    value.substring(4, 9),
-                    value.substring(9, 12),
-                    value.substring(12));
+    public boolean validate() {
+        String normalized = value.replaceAll("[\\s-]", "");
+        return isValidIsbn10(normalized) || isValidIsbn13(normalized);
+    }
+
+    private static boolean isValidIsbn10(String s) {
+        if (s.length() != 10) return false;
+        int sum = 0;
+        for (int i = 0; i < 9; i++) {
+            if (!Character.isDigit(s.charAt(i))) return false;
+            sum += (s.charAt(i) - '0') * (10 - i);
         }
+        char last = s.charAt(9);
+        sum += (last == 'X' || last == 'x') ? 10 : (last - '0');
+        return sum % 11 == 0;
+    }
+
+    private static boolean isValidIsbn13(String s) {
+        if (s.length() != 13) return false;
+        int sum = 0;
+        for (int i = 0; i < 13; i++) {
+            if (!Character.isDigit(s.charAt(i))) return false;
+            int digit = s.charAt(i) - '0';
+            sum += (i % 2 == 0) ? digit : digit * 3;
+        }
+        return sum % 10 == 0;
     }
 
     @Override
-    public boolean equals(Object obj) {
-        if (this == obj) return true;
-        if (obj == null || getClass() != obj.getClass()) return false;
-        ISBN isbn = (ISBN) obj;
-        return Objects.equals(value, isbn.value);
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (!(o instanceof ISBN)) return false;
+        return value.equals(((ISBN) o).value);
     }
 
     @Override
